--- a/index.html
+++ b/index.html
@@ -3,9 +3,78 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Coffe Shop</title>
 </head>
 <body>
-  
+  <main>
+    <div class="container">
+      <div class="header">
+        <h1>Our Coffee Shop</h1>
+        <p>Introducing Our Coffe Shop, a selection of unique coffees from different roast types and origins, expertly roasted in small batches and shipped fresh weekly.</p>
+        <div class="button">
+          <button>All Products</button>
+          <button>Available Now</button>
+        </div>
+      </div>
+      <!--The product cage-->
+      <div class="prdct-container">
+        <div class="product">
+          <img src="./images/cappucino.jpeg" alt="Product 1">
+          <div class="product-info">
+            <span class="badge-popular"></span>
+            <h3></h3>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="product">
+          <img src="./images/special.jpg" alt="">
+          <div class="product-info">
+            <span class="badge-popular"></span>
+            <h3></h3>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="product">
+          <img src="./images/house-coffe.jpg" alt="Product 3">
+          <div class="product-info">
+            <span class="badge-popular"></span>
+            <h3></h3>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="product">
+          <img src="./images/espresso.jpg" alt="Product 4">
+          <div class="product-info">
+            <span class="badge-popular"></span>
+            <h3></h3>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="product">
+          <img src="./images/chocolate-coffe.jpg" alt="Product 5">
+          <div class="product-info">
+            <span class="badge-popular"></span>
+            <h3></h3>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="product">
+          <img src="./images/coffe-lette.jpg" alt="Product 6">
+          <div class="product-info">
+            <span class="badge-popular"></span>
+            <h3></h3>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
