About to completed

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="product">
           <img src="./images/cappucino.jpeg" alt="Product 1">
           <div class="product-info">
-            <span class="badge-popular"></span>
-            <h3></h3>
-            <p></p>
-            <p></p>
+            <span class="badge-popular">Popular</span>
+            <h3>Cappucino</h3>
+            <p>$5.20</p>
+            <img src="./images/Star.svg" alt=""><p>4.7 <span class="vote"> (65 vote) </span></p>
           </div>
         </div>
         <div class="product">
