Completed my project

--- a/index.html
+++ b/index.html
@@ -25,52 +25,52 @@
             <span class="badge-popular">Popular</span>
             <h3>Cappucino</h3>
             <p>$5.20</p>
-            <img src="./images/Star.svg" alt=""><p>4.7 <span class="vote"> (65 vote) </span></p>
+            <img src="./images/Star_fill.svg" alt=""><p>4.7 <span class="vote"> (65 vote) </span></p>
           </div>
         </div>
         <div class="product">
-          <img src="./images/special.jpg" alt="">
+          <img src="./images/special.jpg" alt="Product 2">
           <div class="product-info">
             <span class="badge-popular"></span>
-            <h3></h3>
-            <p></p>
-            <p></p>
+            <h3>Valentine Special</h3>
+            <p>$5.50</p>
+            <img src="./images/Star.svg" alt=""><p> <span class="vote">No rating</span></p>
           </div>
         </div>
         <div class="product">
           <img src="./images/house-coffe.jpg" alt="Product 3">
           <div class="product-info">
             <span class="badge-popular"></span>
-            <h3></h3>
-            <p></p>
-            <p></p>
+            <h3>House Coffee</h3>
+            <p>$3.50</p>
+            <img src="./images/Star_fill.svg" alt=""><p>4.85 <span class="vote"> (14 vote) </span></p>
           </div>
         </div>
         <div class="product">
           <img src="./images/espresso.jpg" alt="Product 4">
           <div class="product-info">
             <span class="badge-popular"></span>
-            <h3></h3>
-            <p></p>
-            <p></p>
+            <h3>Espresso</h3>
+            <p>$2.50</p>
+            <img src="./images/Star_fill.svg" alt=""><p>4.9 <span class="vote"> (55 vote) </span></p>
           </div>
         </div>
         <div class="product">
           <img src="./images/chocolate-coffe.jpg" alt="Product 5">
           <div class="product-info">
-            <span class="badge-popular"></span>
-            <h3></h3>
-            <p></p>
-            <p></p>
+            <span class="badge">Popular</span>
+            <h3>Chocolate Coffee</h3>
+            <p>$4.0</p>
+            <img src="./images/Star_fill.svg" alt=""><p>4.65 <span class="vote"> (122 vote) </span></p>
           </div>
         </div>
         <div class="product">
           <img src="./images/coffe-lette.jpg" alt="Product 6">
           <div class="product-info">
             <span class="badge-popular"></span>
-            <h3></h3>
-            <p></p>
-            <p></p>
+            <h3>Coffee Lette</h3>
+            <p>$4.50</p>
+            <img src="./images/Star_fill.svg" alt=""><p>5.0 <span class="vote"> (23 vote) </span></p>
           </div>
         </div>
       </div>
